// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch demo -- checked 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3357df;
}

.c0:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c0 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #4cd964;
}

.c0 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #3357df;
}

.c10:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- disabled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c1 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c11 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c11 .c8 {
  background: #4cd964;
}

.c11 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3357df;
}

.c0:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c0 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
  border-color: #cccccc;
  cursor: not-allowed;
}

.c10 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c10 .c1 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.c10 .c8 {
  background: #cccccc;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- onTextAndOffText 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c1 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c10 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c10 .c8 {
  background: #4cd964;
}

.c10 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3357df;
}

.c0:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c0 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c11 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.c11 .c8 {
  background: #cccccc;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          开
        </span>
        <span
          class="c5 c4"
        >
          关
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- size 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c12 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c12 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c12 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c12 .c3,
.c12 .c5 {
  line-height: 16px;
}

.c12 .c3 {
  padding-right: 20px;
}

.c12 .c5 {
  padding-left: 20px;
}

.c12 .c1 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c12 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c12 .c8 {
  background: #4cd964;
}

.c12 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #3357df;
}

.c10:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c13 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c13 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c13 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c13 .c3,
.c13 .c5 {
  line-height: 16px;
}

.c13 .c3 {
  padding-right: 20px;
}

.c13 .c5 {
  padding-left: 20px;
}

.c13 .c3 {
  display: none;
}

.c13 .c1 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.c13 .c8 {
  background: #cccccc;
}

.c0 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 24px;
  width: 45px;
  padding: 1px;
  border: 1px solid #c3cad9;
  border-width: 0;
}

.c0:hover {
  border-color: #3357df;
}

.c0:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c0 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c0 .c8 {
  background: #f44336;
  left: 13px;
  height: 14px;
}

.c0 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c0 .c3,
.c0 .c5 {
  display: none;
}

.c0 .c3 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 32px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 22px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c11 .c8 {
  background: #f44336;
  left: 18px;
  height: 14px;
}

.c11 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c3 {
  padding-right: 26px;
}

.c11 .c5 {
  padding-left: 26px;
}

.c11 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- switch 1`] = `
.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c21:hover {
  border-color: #3357df;
}

.c21:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c21 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c21 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c21 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c21 .c14,
.c21 .c16 {
  line-height: 16px;
}

.c21 .c14 {
  padding-right: 20px;
}

.c21 .c16 {
  padding-left: 20px;
}

.c21 .c12 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c21 .c17 {
  left: 100%;
  margin-left: -19px;
}

.c21 .c19 {
  background: #4cd964;
}

.c21 .c16 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

.c24 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c24 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c24 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c24 .c14,
.c24 .c16 {
  line-height: 16px;
}

.c24 .c14 {
  padding-right: 20px;
}

.c24 .c16 {
  padding-left: 20px;
}

.c24 .c14 {
  display: none;
}

.c24 .c12 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.c24 .c19 {
  background: #cccccc;
}

.c25:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c25 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c25 .c19 {
  background: #f44336;
  left: 13px;
  height: 14px;
}

.c25 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c25 .c14,
.c25 .c16 {
  display: none;
}

.c25 .c14 {
  display: none;
}

.c26:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c26 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c26 .c19 {
  background: #f44336;
  left: 18px;
  height: 14px;
}

.c26 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c26 .c14 {
  padding-right: 26px;
}

.c26 .c16 {
  padding-left: 26px;
}

.c26 .c14 {
  display: none;
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-htpNat {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-htpNat:last-child {
  margin-right: 0;
}

.c7 .c28 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c28:last-child {
  margin-right: 0;
}

.c7 .c29+.c29 {
  margin-left: -1px;
}

.c7 .c27 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c27:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c27:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c23 {
  display: table;
  width: 100%;
}

.c22 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c22.uc-fe-input-block {
  display: block;
}

.c22 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c22 input,
.c22 input:hover,
.c22 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c22:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c22 input {
  line-height: 26px;
  height: 26px;
}

.c22 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c22 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c22 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c22 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c21"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        onText
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c22"
        >
          <span
            class="c23"
          >
            <input
              value="ON"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        offText
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c22"
        >
          <span
            class="c23"
          >
            <input
              value="OFF"
            />
          </span>
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c21"
    >
      <div
        class="c12 c13"
      >
        <span
          class="c14 c15"
        >
          ON
        </span>
        <span
          class="c16 c15"
        >
          OFF
        </span>
        <span
          class="c17 c18"
        >
          <span
            class="c19 c20"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- uncontrolled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3357df;
}

.c0:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c0 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #4cd964;
}

.c0 .c5 {
  display: none;
}

.c10:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c11 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  color: #cccccc;
  border-color: #d9d9d9;
  box-shadow: none;
  background: #f7f7f7;
}

.c11 .c8 {
  background: #cccccc;
}

.c12:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c12 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c12 .c8 {
  background: #f44336;
  left: 13px;
  height: 14px;
}

.c12 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c12 .c3,
.c12 .c5 {
  display: none;
}

.c12 .c3 {
  display: none;
}

.c13:hover .c6 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c13 .c6 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 24px;
  height: 24px;
}

.c13 .c8 {
  background: #f44336;
  left: 18px;
  height: 14px;
}

.c13 .c1 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c13 .c3 {
  padding-right: 26px;
}

.c13 .c5 {
  padding-left: 26px;
}

.c13 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
